/*
 * $Id$
 */

2010-11-05 21:39 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
     * rebuilded makefiles

  *  src/wxbase/baseclasses/wx_Window.cpp
     * minor code cleanup

2010-11-04 07:22 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/wxh.h
  *  include/wxHarbour/xho_classes.h
     * moved some function prototypes to xho_classes.h

  *  src/common/xho_classes.cpp
     ! Fixed hash map to compile with QHash maps
     * added conditional compiling to separate QT/WX constructs

2010-11-03 22:16 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  include/wxHarbour/wxh.h
  *  include/wxHarbour/wxharbour.ch
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
  *  src/common/wx_harbour.cpp
  *  src/hrbcompat/tbrowse/wx_Browse.cpp
  *  src/raddox/TRDOServer_c.cpp
  *  src/raddox/TTable_c.cpp
  *  src/wxbase/advctrls/wx_Grid.cpp
  *  src/wxbase/advctrls/wx_GridTableBase.cpp
  *  src/wxbase/advctrls/wx_Panel.cpp
  *  src/wxbase/advctrls/wx_StatusBar.cpp
  *  src/wxbase/app/wx_App.cpp
  *  src/wxbase/app/wx_TaskBarIcon.cpp
  *  src/wxbase/baseclasses/wx_ControlWithItems.cpp
  *  src/wxbase/baseclasses/wx_ImageList.cpp
  *  src/wxbase/baseclasses/wx_ListItem.cpp
  *  src/wxbase/baseclasses/wx_Object.cpp
  *  src/wxbase/baseclasses/wx_ScrolledWindow.cpp
  *  src/wxbase/baseclasses/wx_TopLevelWindow.cpp
  *  src/wxbase/baseclasses/wx_Window.cpp
  *  src/wxbase/books/wx_AuiNotebook.cpp
  *  src/wxbase/books/wx_Listbook.cpp
  *  src/wxbase/books/wx_Notebook.cpp
  *  src/wxbase/comdialogs/wx_FileDialog.cpp
  *  src/wxbase/comdialogs/wx_MessageDialog.cpp
  *  src/wxbase/containers/wx_SplitterWindow.cpp
  *  src/wxbase/controls/wx_BitmapButton.cpp
  *  src/wxbase/controls/wx_Button.cpp
  *  src/wxbase/controls/wx_CheckBox.cpp
  *  src/wxbase/controls/wx_Choice.cpp
  *  src/wxbase/controls/wx_ComboBox.cpp
  *  src/wxbase/controls/wx_ListCtrl.cpp